Correct images in index.html and project.html

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </p>
           <div class="jumbotron" style="background-color:#fff799">
             <a href="project.html">
-              <img onmouseover="imgShadow(this)" onmouseout="imgNoShadow(this)"  src="IPM-Logo_no_bg.png" alt="Logo"/>
+              <img onmouseover="imgShadow(this)" onmouseout="imgNoShadow(this)"  src="images/IPM-Logo_no_bg.png" alt="Logo"/>
             </a>
             </br></br>
             <p align="justify">This is a project for a Human–Computer Interaction course in FCT NOVA.</p>
