--- a/project.html
+++ b/project.html
@@ -81,8 +81,8 @@
 
             <div class="col-md-4 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <a href="IPM-Etapa1.pdf">
-                        <img src="stage1.png" alt="">
+                    <a href="files/IPM-Etapa1.pdf">
+                        <img src="images/stage1.png" alt="">
                     </a>
                     <div class="caption">
                         <hr>
