--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
                 <h3>Francisco Magalhães
                     <small>Student</small>
                 </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+                <p>Cool guy whose favourite hangout place is Foo Bar.</p>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
                 <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
