--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 
 </head>
 
-<body>
+<body background="images/Background-Image_blur.jpg" style="background-repeat: no-repeat; background-attachment: fixed; background-size: cover">
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -57,7 +57,8 @@
 
     <!-- Page Content -->
     <div class="container">
-
+    <div style="background-color:#ffffff; padding-top: 10px; padding-bottom: 30px; margin-bottom: 30px; padding-right: 15px;
+                padding-left: 15px; border-radius: 6px">
         <!-- Introduction Row -->
         <div class="row">
             <div class="col-lg-12">
@@ -75,27 +76,28 @@
                 <h2 class="page-header">Our Team</h2>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+                <img class="img-circle img-responsive img-center" src="images/Antonio.png" height="200px" width="200px" alt="">
                 <h3>António Caeiro
-                    <small>Student</small>
+                    <!--<small>Student</small>-->
                 </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+                <p>Member of the Portuguese Scouts and an assiduous practicer of climbing.</p>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+                <img class="img-circle img-responsive img-center" src="images/Francisco.jpg" height="200px" width="200px" alt="">
                 <h3>Francisco Magalhães
-                    <small>Student</small>
+                    <!--<small>Student</small>-->
                 </h3>
-                <p>Cool guy whose favourite hangout place is Foo Bar.</p>
+                <p>Cool guy whose favourite hangout place is Foo Bar.<br/>Also a member of the Portuguese Scouts.</p>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+                <img class="img-circle img-responsive img-center" src="images/Pedro.jpg" height="200px" width="200px" alt="">
                 <h3>Pedro Lopes
-                    <small>Student</small>
+                    <!--<small>Student</small>-->
                 </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+                <p>Not a Scout... but an assiduous night runner!</p>
             </div>
         </div>
+    </div>
 
         <hr>
 
@@ -103,7 +105,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>&copy; 2016 António Caeiro nº42486, Francisco Magalhães nº42745, Pedro Lopes nº42487</p>
+                    <p style="color:#ffffff">&copy; 2016 António Caeiro nº42486, Francisco Magalhães nº42745, Pedro Lopes nº42487</p>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
