Add Stage 2 to the project page

--- a/project.html
+++ b/project.html
@@ -98,13 +98,15 @@
                 </div>
             </div>
 
-            <!-- Remove line to add next stage
             <div class="col-md-4 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img src="http://placehold.it/800x500" alt="">
+                    <a href="files/IPM-Etapa2.pdf">
+                        <img src="images/stage2.png" alt="">
+                    </a>
                     <div class="caption">
+                        <hr>
                         <h3>Stage 2</h3>
-                        <p>Something about the report.</p>
+                        <p>This document concerns the project's second stage.</p>
                         <p>
                         </p>
                     </div>
