Add stage 3 to the webpage.

--- a/project.html
+++ b/project.html
@@ -91,7 +91,7 @@
                     <div class="caption">
                         <hr>
                         <h3>Stage 1</h3>
-                        <p>This document concerns the project's first stage.</p>
+                        <p>This document concerns about the first project's proposal.</p>
                         <p>
                         </p>
                     </div>
@@ -106,20 +106,22 @@
                     <div class="caption">
                         <hr>
                         <h3>Stage 2</h3>
-                        <p>This document concerns the project's second stage.</p>
+                        <p>This document concerns about the project's user and task analysis.</p>
                         <p>
                         </p>
                     </div>
                 </div>
             </div>
             
-            <!-- Remove line to add next stage
             <div class="col-md-4 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img src="http://placehold.it/800x500" alt="">
+                    <a href="files/IPM-Etapa3.pdf">
+                        <img src="images/stage3.png" alt="">
+                    </a>
                     <div class="caption">
+                        <hr>
                         <h3>Stage 3</h3>
-                        <p>Something about the report.</p>
+                        <p>This document concerns about the project's first propotype design.</p>
                         <p>
                         </p>
                     </div>
