--- a/project.html
+++ b/project.html
@@ -91,7 +91,7 @@
                     <div class="caption">
                         <hr>
                         <h3>Stage 1</h3>
-                        <p>This document concerns about the first project's proposal.</p>
+                        <p>This document concerns the first project's proposal.</p>
                         <p>
                         </p>
                     </div>
@@ -106,7 +106,7 @@
                     <div class="caption">
                         <hr>
                         <h3>Stage 2</h3>
-                        <p>This document concerns about the project's user and task analysis.</p>
+                        <p>This document concerns about project's user and task analysis.</p>
                         <p>
                         </p>
                     </div>
@@ -121,7 +121,22 @@
                     <div class="caption">
                         <hr>
                         <h3>Stage 3</h3>
-                        <p>This document concerns about the project's first propotype design.</p>
+                        <p>This document concerns the project's first propotype design.</p>
+                        <p>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="col-md-4 col-sm-6 hero-feature">
+                <div class="thumbnail">
+                    <a href="files/IPM-Etapa3.pdf">
+                        <img src="images/stage3.png" alt="">
+                    </a>
+                    <div class="caption">
+                        <hr>
+                        <h3>Stage 4</h3>
+                        <p>This document concerns the project's computer prototype. <a href="http://google.pt">Download apk.</a></p>
                         <p>
                         </p>
                     </div>
