--- a/project.html
+++ b/project.html
@@ -130,13 +130,13 @@
             
             <div class="col-md-4 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <a href="files/IPM-Etapa3.pdf">
-                        <img src="images/stage3.png" alt="">
+                    <a href="files/IPM-Etapa4.pdf">
+                        <img src="images/stage4.png" alt="">
                     </a>
                     <div class="caption">
                         <hr>
                         <h3>Stage 4</h3>
-                        <p>This document concerns the project's computer prototype. <a href="http://google.pt">Download apk.</a></p>
+                        <p>This document concerns the project's computer prototype. <a href="files/campplanner.apk">Download apk.</a></p>
                         <p>
                         </p>
                     </div>
