Added the apk of the application

--- a/project.html
+++ b/project.html
@@ -136,7 +136,7 @@
                     <div class="caption">
                         <hr>
                         <h3>Stage 4</h3>
-                        <p>This document concerns the project's computer prototype. <a href="files/campplanner.apk">Download apk.</a></p>
+                        <p>This document concerns the project's computer prototype. <a href="files/CampPlanner.apk">Download apk.</a></p>
                         <p>
                         </p>
                     </div>
