--- a/project.html
+++ b/project.html
@@ -143,15 +143,15 @@
                 </div>
             </div>
             
-            <!-- Remove line to add next stage
             <div class="col-md-4 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img src="http://placehold.it/800x500" alt="">
+                    <a href="files/IPM-Etapa5.pdf">
+                        <img src="images/stage5.png" alt="">
+                    </a>
                     <div class="caption">
-                        <h3>Stage 4</h3>
-                        <p>Something about the report.</p>
+                        <h3>Stage 5</h3>
+                        <p>This document concerns the heuristic evaluation of the project <a href="https://mallmap.herokuapp.com/">MallMap</a>.</p>
                         <p>
-
                         </p>
                     </div>
                 </div>
