Added our colleagues evaluation of our application

--- a/project.html
+++ b/project.html
@@ -151,8 +151,7 @@
                     <div class="caption">
                         <h3>Stage 5</h3>
                         <p>This document concerns the heuristic evaluation of the project <a href="https://mallmap.herokuapp.com/">MallMap</a>.</p>
-                        <p>
-                        </p>
+                        <p>The evaluation of our application made by our colleagues can be found in <a href="files/phase5-report-evaluation.pdf">here</a>.</p>
                     </div>
                 </div>
             </div>
