--- a/project.html
+++ b/project.html
@@ -156,6 +156,18 @@
                 </div>
             </div>
             
+            <div class="col-md-4 col-sm-6 hero-feature">
+                <div class="thumbnail">
+                    <a href="files/IPM-Etapa6.pdf">
+                        <img src="images/stage6.png" alt="">
+                    </a>
+                    <div class="caption">
+                        <h3>Stage 6</h3>
+                        <p>This document concerns the last corrections and improvements to our project, based on the evaluation results.</p>
+                    </div>
+                </div>
+            </div>
+            
             <!-- Remove line to add next stage
             <div class="col-md-4 col-sm-6 hero-feature">
                 <div class="thumbnail">
