Last commit I hope

--- a/project.html
+++ b/project.html
@@ -162,7 +162,7 @@
                     </a>
                     <div class="caption">
                         <h3>Stage 6</h3>
-                        <p>This document concerns the last corrections and improvements to our project, based on the evaluation results.</p>
+                        <p>This document concerns the last corrections and improvements to our project, based on the evaluation results. <a href="files/CampPlanner.apk">Download apk.</a></p>
                         <p>The evaluation of our application made by our colleagues can be found in <a href="files/phase5-report-evaluation.pdf">here</a>.</p>
                     </div>
                 </div>
